# PyWeb_HW10

./: pyproject.toml
notes/notes/: settings.py  urls.py
notes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
notes/quotesapp/migrations/: 0001_initial.py
notes/quotesapp/templates/quotesapp/: quotes.html
