[tool.poetry]
name = "pyweb-hw10"
version = "0.1.0"
description = ""
authors = ["UreshiiSushi <merieru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^5.0.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
